--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Mukta:wght@200;300;400;500&display=swap');
-body {
-    background-color: #F5FFF6;
-}
 * {
     font-family: Mukta, sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+body {
+    width: 100vw;
+    height: 100vh;
+    background-color: #F5FFF6;
 }
