--- a/src/nav.css
+++ b/src/nav.css
@@ -14,6 +14,7 @@
 #navbar {
     display: flex;
     width: 100vw;
+    height: 15vh;
     padding: 1.5em 2.5em;
     align-items: center;
     justify-content: space-between;
@@ -26,7 +27,7 @@
 }
 
 #navbar #logo {
-    height: 3.5em;
+    height: clamp(4em, 6vw, 5em);
 }
 
 #navbar #companyName,
@@ -35,7 +36,7 @@
 }
 
 #navbar #companyName {
-    font-size: 2em;
+    font-size: clamp(2em, 4vw, 2.7em);
     letter-spacing: 0.02em;
     font-weight: 500;
 }
@@ -92,7 +93,6 @@
 }
 
 #mobile-nav #mobile-navLinks li {
-    color: var(--black5);
     padding: 0.7em 0.3em;
     border-radius: 0.3em;
     background-color: var(--highlight);
@@ -107,7 +107,10 @@
     opacity: 0;
     transition: 0.8s ease;
 }
-
+#mobile-nav #mobile-navLinks li a {
+    text-decoration: none;
+    color: var(--black5);
+}
 #mobile-nav #mobile-navLinks li:nth-child(1) {
     transition-delay: 0.3s;
 }
@@ -127,3 +130,41 @@
     display: none;
 }
 
+@media (min-width: 768px){
+    #mobile-nav {
+        display: none;
+    }
+
+    .hamburger, .hamburger .bar {
+        display: none;
+    }
+
+    #navbar #navLinks {
+        display: flex;
+        word-spacing: 0.5em;
+        text-align: center;
+        font-size: clamp(1em, 2.3vw, 2em);
+        font-weight: 500;
+        gap: 16%;
+        align-items: center;
+        width: 40%;
+        max-width: 27em;
+        margin-right: min(3vw, 1em);
+        color: var(--action);
+        list-style: none;
+    }
+
+    #navbar #navLinks li {
+        transition: 0.25s ease-out;
+    }
+
+    #navbar #navLinks li a {
+        text-decoration: none;
+    }
+
+    #navbar #navLinks li:hover {
+        cursor: pointer;
+        padding-bottom: 0.8em;
+        border-bottom: clamp(3px, 0.38vw, 5px) solid var(--action);
+    }
+}
