--- a/src/footer.css
+++ b/src/footer.css
@@ -11,7 +11,7 @@
 }
 
 #footer {
-    background-color: #282E29;
+    background-color: #282e29;
     position: relative;
     padding: 6vh 0 3vh;
     display: flex;
@@ -46,10 +46,6 @@
     transition: 0.4s;
 }
 
-.icons img:hover {
-    transform: translateY(-0.7em);
-}
-
 .footer-links {
     text-align: center;
 }
@@ -70,4 +66,10 @@
     padding-top: clamp(1px, 1vw, 1em);
     word-spacing: 0.18em;
     font-size: clamp(0.9em, 1.5vw, 1.2em);
+}
+
+@media screen and (min-width: 768px) {
+    .icons img:hover {
+        transform: translateY(-0.7em);
+    }
 }
